--- a/IndexWeights.ipynb
+++ b/IndexWeights.ipynb
@@ -6,7 +6,7 @@
       "name": "IndexWeights.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPKF+SR7KwQ7WhUiE8ABBpI",
+      "authorship_tag": "ABX9TyPyd8QQGfmnRIEIE5YeDzD+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +29,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Before running this script make sure NIFTY and BANKNIFTY are in Synk (Both + or Both -)"
+      ],
+      "metadata": {
+        "id": "_kLWLzeFfK2G"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 44,
       "metadata": {
@@ -48,7 +57,7 @@
             }
           },
           "base_uri": "https://localhost:8080/",
-          "height": 427
+          "height": 586
         },
         "id": "x61wnJH1BgY1",
         "outputId": "a3b5b5aa-76b0-45c5-df04-86c7a2296bdf"
@@ -317,6 +326,7 @@
         }
       ],
       "source": [
+        "\n",
         "import pandas as pd\n",
         "from google.colab import files\n",
         "import io\n",
@@ -333,7 +343,7 @@
         "new_header = df.iloc[1] #grab the first row for the header\n",
         "df = df[2:] #take the data less the header row\n",
         "df.columns = new_header #set the header row as the df header\n",
-        "df.head(50)\n"
+        "df.head()\n"
       ],
       "metadata": {
         "colab": {
@@ -1434,7 +1444,7 @@
       "cell_type": "code",
       "source": [
         "df2 = df.iloc[:50]\n",
-        "df2"
+        "df2.head()"
       ],
       "metadata": {
         "colab": {
@@ -3070,7 +3080,7 @@
             }
           },
           "base_uri": "https://localhost:8080/",
-          "height": 262
+          "height": 410
         },
         "id": "jZj8VuiYMzMA",
         "outputId": "f454b331-09f3-4140-fbf0-d61a3ef67c79"
@@ -3946,7 +3956,7 @@
             }
           },
           "base_uri": "https://localhost:8080/",
-          "height": 262
+          "height": 410
         },
         "id": "cg1zK6XDc2Sx",
         "outputId": "711d7150-42c5-4ab9-d4a9-fedd0b464af9"
@@ -4674,32 +4684,42 @@
         "df21['Weight'] = df21['Weight'].astype(float)\n",
         "\n",
         "df21['Product']=df21['Weight']*df21['Change_y']\n",
-        "df21.head()\n"
+        "df21\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 520
         },
         "id": "vCGcHniKeT2W",
-        "outputId": "d154e0f7-6a84-4bda-d6fa-19bcf31853a6"
+        "outputId": "8ea90c0b-3415-4326-9516-cc5c3c628182"
       },
-      "execution_count": 69,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "       Symbol  Weight  Change_x  Change_y  Product\n",
-              "0  ASIANPAINT    1.95         0     -0.11  -0.2145\n",
-              "1  BAJAJ-AUTO    0.65         0     -0.51  -0.3315\n",
-              "2        BPCL    0.46         0     -0.51  -0.2346\n",
-              "3  BHARTIARTL    2.33         0     -1.25  -2.9125\n",
-              "4   BRITANNIA    0.52         0     -0.17  -0.0884"
+              "        Symbol  Weight  Change_x  Change_y  Product\n",
+              "0   ASIANPAINT    1.95         0     -0.11  -0.2145\n",
+              "1   BAJAJ-AUTO    0.65         0     -0.51  -0.3315\n",
+              "2         BPCL    0.46         0     -0.51  -0.2346\n",
+              "3   BHARTIARTL    2.33         0     -1.25  -2.9125\n",
+              "4    BRITANNIA    0.52         0     -0.17  -0.0884\n",
+              "5        CIPLA    0.68         0     -0.04  -0.0272\n",
+              "6    COALINDIA    0.51         0     -0.68  -0.3468\n",
+              "7     JSWSTEEL    0.94         0     -0.57  -0.5358\n",
+              "8         NTPC    0.99         0     -2.76  -2.7324\n",
+              "9    NESTLEIND    0.87         0     -0.15  -0.1305\n",
+              "10        ONGC    0.78         0     -5.53  -4.3134\n",
+              "11   POWERGRID    1.04         0     -1.28  -1.3312\n",
+              "12    RELIANCE   12.86         0     -0.46  -5.9156\n",
+              "13        SBIN    2.54         0     -0.19  -0.4826\n",
+              "14   TATASTEEL    1.37         0     -0.86  -1.1782"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-083a9db9-37c1-4e4f-bc55-30795fd0fd42\">\n",
+              "  <div id=\"df-46ce8382-a870-4e19-8731-300a68d81bfa\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -4767,10 +4787,90 @@
               "      <td>-0.17</td>\n",
               "      <td>-0.0884</td>\n",
               "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>CIPLA</td>\n",
+              "      <td>0.68</td>\n",
+              "      <td>0</td>\n",
+              "      <td>-0.04</td>\n",
+              "      <td>-0.0272</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>COALINDIA</td>\n",
+              "      <td>0.51</td>\n",
+              "      <td>0</td>\n",
+              "      <td>-0.68</td>\n",
+              "      <td>-0.3468</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>JSWSTEEL</td>\n",
+              "      <td>0.94</td>\n",
+              "      <td>0</td>\n",
+              "      <td>-0.57</td>\n",
+              "      <td>-0.5358</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>NTPC</td>\n",
+              "      <td>0.99</td>\n",
+              "      <td>0</td>\n",
+              "      <td>-2.76</td>\n",
+              "      <td>-2.7324</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>NESTLEIND</td>\n",
+              "      <td>0.87</td>\n",
+              "      <td>0</td>\n",
+              "      <td>-0.15</td>\n",
+              "      <td>-0.1305</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>ONGC</td>\n",
+              "      <td>0.78</td>\n",
+              "      <td>0</td>\n",
+              "      <td>-5.53</td>\n",
+              "      <td>-4.3134</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>POWERGRID</td>\n",
+              "      <td>1.04</td>\n",
+              "      <td>0</td>\n",
+              "      <td>-1.28</td>\n",
+              "      <td>-1.3312</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12</th>\n",
+              "      <td>RELIANCE</td>\n",
+              "      <td>12.86</td>\n",
+              "      <td>0</td>\n",
+              "      <td>-0.46</td>\n",
+              "      <td>-5.9156</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>13</th>\n",
+              "      <td>SBIN</td>\n",
+              "      <td>2.54</td>\n",
+              "      <td>0</td>\n",
+              "      <td>-0.19</td>\n",
+              "      <td>-0.4826</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>14</th>\n",
+              "      <td>TATASTEEL</td>\n",
+              "      <td>1.37</td>\n",
+              "      <td>0</td>\n",
+              "      <td>-0.86</td>\n",
+              "      <td>-1.1782</td>\n",
+              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-083a9db9-37c1-4e4f-bc55-30795fd0fd42')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-46ce8382-a870-4e19-8731-300a68d81bfa')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -4821,12 +4921,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-083a9db9-37c1-4e4f-bc55-30795fd0fd42 button.colab-df-convert');\n",
+              "          document.querySelector('#df-46ce8382-a870-4e19-8731-300a68d81bfa button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-083a9db9-37c1-4e4f-bc55-30795fd0fd42');\n",
+              "          const element = document.querySelector('#df-46ce8382-a870-4e19-8731-300a68d81bfa');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -4849,7 +4949,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 69
+          "execution_count": 74
         }
       ]
     },
@@ -4859,17 +4959,17 @@
         "df20['Weight'] = df20['Weight'].astype(float)\n",
         "\n",
         "df20['Product']=df20['Weight']*df20['Change_y']\n",
-        "df20.head()\n"
+        "df20\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 238
+          "height": 708
         },
         "id": "Eo97OxAvgHRo",
-        "outputId": "906de28e-f23d-4eb2-cac0-726a5dc95848"
+        "outputId": "90e976c4-388a-48db-8e88-5873601e06c5"
       },
-      "execution_count": 70,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4881,11 +4981,26 @@
               "BAJFINANCE    2.37         0      2.84   6.7308\n",
               "BAJAJFINSV    1.20         0      2.58   3.0960\n",
               "DIVISLAB      0.77         0      1.84   1.4168\n",
-              "DRREDDY       0.67         0      2.06   1.3802"
+              "DRREDDY       0.67         0      2.06   1.3802\n",
+              "HCLTECH       1.53         0      2.63   4.0239\n",
+              "HDFCBANK      8.10         0      1.95  15.7950\n",
+              "HDFCLIFE      0.72         0      3.36   2.4192\n",
+              "HEROMOTOCO    0.43         0      3.02   1.2986\n",
+              "HINDUNILVR    2.67         0      2.32   6.1944\n",
+              "HDFC          5.39         0      1.85   9.9715\n",
+              "INDUSINDBK    0.85         0      3.16   2.6860\n",
+              "INFY          7.66         0      2.99  22.9034\n",
+              "KOTAKBANK     3.51         0      2.06   7.2306\n",
+              "LT            2.74         0      2.46   6.7404\n",
+              "M&M           1.18         0      1.95   2.3010\n",
+              "MARUTI        1.37         0      1.67   2.2879\n",
+              "TATAMOTORS    1.05         0      2.27   2.3835\n",
+              "TECHM         1.05         0      4.21   4.4205\n",
+              "WIPRO         1.01         0      3.14   3.1714"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-328a5091-e9c3-40b3-9e70-9fba8543f33b\">\n",
+              "  <div id=\"df-fd0db847-22e1-4db5-ab0a-ff373dbe910a\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -4954,10 +5069,115 @@
               "      <td>2.06</td>\n",
               "      <td>1.3802</td>\n",
               "    </tr>\n",
+              "    <tr>\n",
+              "      <th>HCLTECH</th>\n",
+              "      <td>1.53</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2.63</td>\n",
+              "      <td>4.0239</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>HDFCBANK</th>\n",
+              "      <td>8.10</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1.95</td>\n",
+              "      <td>15.7950</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>HDFCLIFE</th>\n",
+              "      <td>0.72</td>\n",
+              "      <td>0</td>\n",
+              "      <td>3.36</td>\n",
+              "      <td>2.4192</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>HEROMOTOCO</th>\n",
+              "      <td>0.43</td>\n",
+              "      <td>0</td>\n",
+              "      <td>3.02</td>\n",
+              "      <td>1.2986</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>HINDUNILVR</th>\n",
+              "      <td>2.67</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2.32</td>\n",
+              "      <td>6.1944</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>HDFC</th>\n",
+              "      <td>5.39</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1.85</td>\n",
+              "      <td>9.9715</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>INDUSINDBK</th>\n",
+              "      <td>0.85</td>\n",
+              "      <td>0</td>\n",
+              "      <td>3.16</td>\n",
+              "      <td>2.6860</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>INFY</th>\n",
+              "      <td>7.66</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2.99</td>\n",
+              "      <td>22.9034</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>KOTAKBANK</th>\n",
+              "      <td>3.51</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2.06</td>\n",
+              "      <td>7.2306</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>LT</th>\n",
+              "      <td>2.74</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2.46</td>\n",
+              "      <td>6.7404</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>M&amp;M</th>\n",
+              "      <td>1.18</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1.95</td>\n",
+              "      <td>2.3010</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>MARUTI</th>\n",
+              "      <td>1.37</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1.67</td>\n",
+              "      <td>2.2879</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>TATAMOTORS</th>\n",
+              "      <td>1.05</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2.27</td>\n",
+              "      <td>2.3835</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>TECHM</th>\n",
+              "      <td>1.05</td>\n",
+              "      <td>0</td>\n",
+              "      <td>4.21</td>\n",
+              "      <td>4.4205</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>WIPRO</th>\n",
+              "      <td>1.01</td>\n",
+              "      <td>0</td>\n",
+              "      <td>3.14</td>\n",
+              "      <td>3.1714</td>\n",
+              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-328a5091-e9c3-40b3-9e70-9fba8543f33b')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fd0db847-22e1-4db5-ab0a-ff373dbe910a')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -5008,12 +5228,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-328a5091-e9c3-40b3-9e70-9fba8543f33b button.colab-df-convert');\n",
+              "          document.querySelector('#df-fd0db847-22e1-4db5-ab0a-ff373dbe910a button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-328a5091-e9c3-40b3-9e70-9fba8543f33b');\n",
+              "          const element = document.querySelector('#df-fd0db847-22e1-4db5-ab0a-ff373dbe910a');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -5036,7 +5256,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 70
+          "execution_count": 75
         }
       ]
     },
@@ -5053,9 +5273,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "30qZShmFgrUz",
-        "outputId": "cb203a7f-9b47-4782-ea44-9b507999c70c"
+        "outputId": "1b0bbdb0-93df-4c44-8385-e9f7c574314d"
       },
-      "execution_count": 72,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5065,7 +5285,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 72
+          "execution_count": 78
         }
       ]
     }
